# contextr

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASE.md  correct-course.md  coverage.xml  install.py  pyproject.toml  story-dod-checklist-etc.1.md
.bmad-core/: install-manifest.yaml
.contextr/: .ignore  state.json
.contextr/profiles/: all.json  test.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  test-on-demand.yml
docs/: architecture.md  brownfield-architecture.md  brownfield-prd.md  cicd-pipeline-guide.md  epic-2-implementation-guide.md  prd.md  project-structure.md  storage-architecture.md  testing.md
docs/epics/: epic-1-modernization.md  epic-2-profile-management.md
docs/prd/: epic-4-performance-workflow-optimization.md
docs/stories/: 1.1.integrate-ruff.md  1.2.configure-pyright.md  1.3.setup-pytest.md  1.4.refactor-contextmanager.md  2.1.save-list-profiles.md  2.2.load-profile.md  2.3.delete-profile.md  3.1.simplify-watch-context-abstraction.md  3.2.improve-gitignore-integration.md  4.1.optimize-ci-workflow.story.md  4.2.pattern-matching-performance.story.md  4.3.ignore-system-robustness.story.md  etc.1.cicd-pipeline.md  etc.2.fix-windows-paths.md
src/contextr/: __init__.py  cli.py  formatters.py  full.py  manager.py  profile.py
test_qa_review/: README.md  data.txt
tests/: __init__.py  conftest.py  test_contextr_core.py
tests/integration/: __init__.py  test_profile_load_integration.py
tests/unit/: __init__.py  test_cli_commands.py  test_cli_profile.py  test_cli_sync.py  (+4 more)
(+8 files in other folders)
